[package]
name = "tower"
version = "0.1.0"
edition = "2024"

[dependencies]
ar = "0.9.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12.0"
flate2 = "1.1.9"
md5 = "0.8.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tar = "0.4.44"
ureq = "3.2.0"
xz2 = "0.1.7"
